fix overflow

--- a/style.scss
+++ b/style.scss
@@ -21,9 +21,10 @@ $grey: #f2f2f2;
 $black: #000;
 
 
-body{
+body, html{
   max-width: 100vw;
   overflow-x: hidden;
+  position:relative;
 }
 
 *{
